@@ -813,7 +813,7 @@ next_item:  /* <--- continue scan if a comma has been detected */
             break;
         }
 
-        /* determine what type of fixup is to be created */
+        /* check size and determine what type of fixup is to be created */
 
         switch ( opndx.instr ) {
         case T_SEG:
@@ -837,6 +837,11 @@ next_item:  /* <--- continue scan if a comma has been detected */
                 }
                 break;
             case 2:
+                /* v2.19: check if offset size is > 16 */
+                if ( opndx.sym && ( GetSymOfssize(opndx.sym) > USE16 ) ) {
+                    DebugMsg(("data_item.ADDR: error, offset wont fit in a WORD\n" ));
+                    EmitError( OFFSET_MAGNITUDE_TOO_LARGE );
+                }
                 fixup_type = FIX_OFF16;
                 break;
 #if AMD64_SUPPORT
